fix: minor img not showing

--- a/src/index.css
+++ b/src/index.css
@@ -115,10 +115,9 @@
 
 /* Line Clamp Utility */
 .line-clamp-2 {
-  display: -webkit-box;
-  -webkit-line-clamp: 2;
-  -webkit-box-orient: vertical;
   overflow: hidden;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
 }
 
 /* Smooth Scrolling */
